# zv

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml  dist.toml
.github/workflows/: publish.yml  release.yml
dev/: rm-zv-path.ps1
docs/: migrating-to-xdg.md
npm/: install.sh  package.json  prepack.sh  run-zv.sh
scripts/: generate-formula.sh  install.ps1  install.sh  rm-zv-path.ps1  rm-zv-path.sh
src/: cli.rs  main.rs  shell.rs  templates.rs  tools.rs
src/app/: config.rs  constants.rs  migrations.rs  minisign.rs  mod.rs  network.rs  toolchain.rs  utils.rs  zls_download.rs  zls_source.rs
src/app/network/: download.rs  mirror.rs  mod.rs  zig_index.rs  zls.rs
src/app/network/zig_index/: index.rs  mod.rs  models.rs
src/cli/: clean.rs  init.rs  install.rs  list.rs  mod.rs  setup.rs  stats.rs  sync.rs  uninstall.rs  update.rs  use.rs  zig.rs  zls.rs  zls_cmd.rs
src/cli/setup/: mod.rs  setup_utils.rs  unix.rs  windows.rs
src/shell/: detection.rs  env_export.rs  generators.rs  mod.rs  path_utils.rs
src/shell/env_files/: env.bat  env.csh  env.fish  env.nu  env.ps1  env.sh
src/shell/env_files/cleanup/: cleanup.bat  cleanup.csh  cleanup.fish  cleanup.nu  cleanup.ps1  cleanup.sh
src/shell/env_files/setup_instructions/: bash.txt  cmd.txt  default.txt  fish.txt  nu.txt  powershell.txt  tcsh.txt  zsh.txt
src/shell/setup/: actions.rs  context.rs  instructions.rs  interactive.rs  mod.rs  requirements.rs  unix.rs  windows.rs
src/types/: error.rs  mod.rs  target_triple.rs  zigversion.rs
templates/barebones/: build.zig
