[package]
name = "zv"
version = "1.0.0"
edition = "2024"
description = "Ziglang Version Manager and Project Starter"
license = "MIT"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
repository = "https://github.com/weezy20/zv"


[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
dotenv = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
semver = "1.0.26"
color-eyre = "0.6.5"
dirs = "6.0.0"
tracing = "0.1.41"
chrono = "0.4.41"
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
target-lexicon = "0.13.2"
serde_json = "1.0.143"
reqwest = "0.12.23"
toml = "0.9.5"
toml_edit = "0.23.4"
thiserror = "2.0.16"
ahash = "0.8.12"
walkdir = "2.5.0"
which = "8.0.0"

[features]
default = ["log"]
log = ["dep:tracing-subscriber"]
dotenv = ["dep:dotenv"]
full = ["dotenv"]


[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
lto = true

[dev-dependencies]
serde_test = "1.0.177"
