[package]
name = "zv"
version = "1.0.0"
edition = "2024"
description = "Ziglang Version Manager and Project Starter"
license = "MIT"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
repository = "https://github.com/weezy20/zv"
keywords = [
    "ziglang",
    "version-manager",
    "project-starter",
    "cli",
    "development-tools",
]

[[bin]]
path = "src/main.rs"
name = "zv"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
dotenv = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3.19", optional = true, features = [
    "env-filter",
] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
semver = "1.0.26"
color-eyre = "0.6.5"
dirs = "6.0.0"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
target-lexicon = "0.13.2"
serde_json = "1.0.143"
reqwest = "0.12.23"
toml = "0.9.5"
toml_edit = "0.23.4"
thiserror = "2.0.16"
ahash = "0.8.12"
walkdir = "2.5.0"
# which = "8.0.0"
same-file = "1.0.6"
sysinfo = "0.37.0"
dunce = "1.0.5"
crc32fast = "1.5.0"
rda = { package = "remove_dir_all", version = "1.0.0", features = ["parallel"] }

[target."cfg(windows)".dependencies]
windows-registry = "0.6.0"
windows-result = "0.4.0"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
]

[features]
default = ["log"]
log = ["dep:tracing-subscriber", "rda/log"]
dotenv = ["dep:dotenv"]
full = ["dotenv"]


[profile.dev]
panic = "unwind"

[profile.release]
panic = "abort"
lto = true

[dev-dependencies]
serde_test = "1.0.177"
