[package]
name = "zv"
version = "0.2.0"
edition = "2024"
description = "Ziglang Version Manager and Project Starter"
license = "MIT"
authors = ["Abhishek Shah <abhishekshah3@gmail.com>"]
homepage = "https://github.com/weezy20/zv"
repository = "https://github.com/weezy20/zv"
keywords = [
    "ziglang",
    "version-manager",
    "project-starter",
    "cli",
    "development-tools",
]

[[bin]]
path = "src/main.rs"
name = "zv"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
dotenv = { version = "0.15", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
color-eyre = "0.6.5"
dirs = "6.0.0"
tracing = "0.1.41"
chrono = { version = "0.4.41", features = ["serde"] }
yansi = { version = "1.0.1", features = ["detect-tty", "detect-env"] }
target-lexicon = "0.13.3"
serde_json = "1.0.145"
reqwest = { version = "0.12.23", features = ["stream"] }
toml = "0.9.7"
toml_edit = "0.23.6"
thiserror = "2.0.16"
ahash = "0.8.12"
walkdir = "2.5.0"
# which = "8.0.0"
same-file = "1.0.6"
sysinfo = "0.37.0"
dunce = "1.0.5"
crc32fast = "1.5.0"
rda = { package = "remove_dir_all", version = "1.0.0", features = ["parallel"] }
cfg-if = "1.0.3"
indicatif = "0.18.0"
futures = "0.3.31"
rand = "0.9.2"
url = "2.5.7"
sha2 = "0.10.8"
minisign-verify = "0.2.4"
tar = "0.4.44"
xz2 = "0.1.7"
zip = "5.1.1"
dialoguer = { version = "0.12.0", default-features = false }

[target."cfg(windows)".dependencies]
windows-registry = "0.6.0"
windows-result = "0.4.0"

[target."cfg(windows)".dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_UI_WindowsAndMessaging",
]

[features]
default = []
dotenv = ["dep:dotenv"]
full = ["dotenv"]


[profile.dev]
opt-level = 0
panic = "unwind"
lto = "off"
strip = "none"
codegen-units = 256
incremental = true
debug = true

[profile.dev.package."*"]
opt-level = 3
debug = false
codegen-units = 256


[profile.release]
opt-level = 3
panic = "abort"
lto = true
strip = true

[profile.release-max]
inherits = "release"
lto = "fat"
codegen-units = 1

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
serde_test = "1.0.177"
tempfile = "3.22.0"
wiremock = "0.6.2"
